--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   provider: ^6.1.1
+  badges: ^3.1.2
+  google_fonts: ^6.2.1
+  random_string: ^2.3.1
 
 dev_dependencies:
   flutter_test:
